@@ -1,10 +1,14 @@
 package org.hiero.otter.test;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
 import static org.hiero.otter.fixtures.OtterAssertions.assertContinuouslyThat;
 
+import com.swirlds.platform.event.preconsensus.PcesMultiFileIterator;
 import edu.umd.cs.findbugs.annotations.NonNull;
+import java.io.IOException;
 import java.time.Duration;
+import java.time.Instant;
 import java.util.List;
 import java.util.function.Function;
 import org.hiero.consensus.model.event.PlatformEvent;
@@ -19,7 +23,7 @@ import org.hiero.otter.fixtures.result.SingleNodePcesResult;
 public class QuiescenceTest {
 
     @OtterTest
-    void quiescenceTest(@NonNull final TestEnvironment env) {
+    void quiescenceTest(@NonNull final TestEnvironment env) throws IOException {
         final Network network = env.network();
         network.addNodes(4);
         final TimeManager timeManager = env.timeManager();
@@ -38,47 +42,34 @@ public class QuiescenceTest {
 
         // Send quiescence command to all nodes
         network.nodes().forEach(node -> node.sendQuiescenceCommand(QuiescenceCommand.QUIESCE));
-        // Wait to ensure everything in the network has settled, all created events have been gossiped,
-        // flushed to PCES, etc.
+        // Wait to ensure everything in the network has settled, all created events have been gossiped and processed
         timeManager.waitFor(Duration.ofSeconds(5));
+        // quiescenceStartTime will be a bit after the actual time to avoid flakiness
+        final Instant quiescenceStartTime = timeManager.now();
 
-        // Collect the data from all nodes
-        final List<Long> lastRoundWhenQuiescedPerNode = network.newConsensusResults().results().stream()
-                .map(SingleNodeConsensusResult::lastRoundNum).toList();
-        for (int i = 1; i < lastRoundWhenQuiescedPerNode.size(); i++) {
-            assertThat(lastRoundWhenQuiescedPerNode.get(0))
-                    .withFailMessage("All nodes should have the same last round when quiesced")
-                    .isEqualTo(lastRoundWhenQuiescedPerNode.get(i));
-        }
-        // Since we have asserted all are equal, just take the first
-        final long lastRoundWhenQuiesced = lastRoundWhenQuiescedPerNode.getFirst();
-        // Collect the last PCES event from each node
-        final List<PlatformEvent> lastEventWhenQuiesced = network.newPcesResults().pcesResults().stream()
-                .map(SingleNodePcesResult::lastPcesEvent).toList();
+        assertThat(network.newConsensusResults().results().stream()
+                .mapToLong(SingleNodeConsensusResult::lastRoundNum).distinct().count())
+                .withFailMessage("All nodes should have the same last round when quiesced")
+                .isEqualTo(1);
+        final long lastRoundWhenQuiesced = network.newConsensusResults().results().getFirst().lastRoundNum();
 
-        // Wait a bit to ensure that the network is quiesced
-        timeManager.waitFor(Duration.ofSeconds(30));
-
+        timeManager.waitFor(Duration.ofSeconds(10));
         // Assert that consensus has not advanced
         network.newConsensusResults().results().stream()
                 .mapToLong(SingleNodeConsensusResult::lastRoundNum)
-                .forEach(r-> assertThat(r)
+                .forEach(r -> assertThat(r)
                         .withFailMessage("No node should have advanced rounds while quiesced")
                         .isEqualTo(lastRoundWhenQuiesced));
-        // Assert that no new PCES events have been created
-        final List<PlatformEvent> lastEventAfterAWhile = network.newPcesResults().pcesResults().stream()
-                .map(SingleNodePcesResult::lastPcesEvent).toList();
-        assertThat(lastEventWhenQuiesced).isEqualTo(lastEventAfterAWhile);
 
         // Test the quiescence breaking command
+        // This should create a single event, which we will verify at the end with the PCES results
         network.nodes().getFirst().sendQuiescenceCommand(QuiescenceCommand.BREAK_QUIESCENCE);
-        // This should create an event and write to PCES, so wait for that
+
+        // Wait a bit more to create distance from the quiescence breaking event and others
+        timeManager.waitFor(Duration.ofSeconds(10));
+        // quiescenceEndTime will be a bit before the actual time to avoid flakiness
+        final Instant quiescenceEndTime = timeManager.now();
         timeManager.waitFor(Duration.ofSeconds(5));
-        final List<PlatformEvent> lastEventAfterBreak = network.newPcesResults().pcesResults().stream()
-                .map(SingleNodePcesResult::lastPcesEvent).toList();
-        assertThat(lastEventWhenQuiesced.getFirst())
-                .withFailMessage("A new event should have been created after breaking quiescence")
-                .isNotEqualTo(lastEventAfterBreak.getFirst());
 
         // Stop quiescing all nodes
         network.nodes().forEach(node -> node.sendQuiescenceCommand(QuiescenceCommand.DONT_QUIESCE));
@@ -86,5 +77,31 @@ public class QuiescenceTest {
         timeManager.waitForCondition(
                 () -> network.newConsensusResults().allNodesAdvancedToRound(lastRoundWhenQuiesced + 20),
                 Duration.ofSeconds(120L));
+        network.shutdown();
+
+        System.out.println("Quiescence started at: " + quiescenceStartTime);
+        System.out.println("Quiescence ended at: " + quiescenceEndTime);
+        // Verify PCES events
+        for (final SingleNodePcesResult pcesResult : network.newPcesResults().pcesResults()) {
+            boolean foundQuiescenceBreakingEvent = false;
+            System.out.println("Checking PCES events for node " + pcesResult.nodeId());
+            try (final PcesMultiFileIterator eventIt = pcesResult.pcesEvents()) {
+                while (eventIt.hasNext()) {
+                    final PlatformEvent event = eventIt.next();
+                    System.out.printf(
+                            "Event from node %d created at %s%n", event.getCreatorId().id(), event.getTimeCreated());
+                    if (event.getTimeCreated().isBefore(quiescenceStartTime)
+                            || event.getTimeCreated().isAfter(quiescenceEndTime)) {
+                        // Ignore events outside the quiescence window
+                        continue;
+                    }
+                    if(foundQuiescenceBreakingEvent){
+                        fail("Found multiple events created during quiescence for node " + pcesResult.nodeId());
+                    }
+                    foundQuiescenceBreakingEvent = true;
+                }
+            }
+        }
+
     }
 }
